# kde4-krunner-pidgin

./: CMakeLists.txt  README  README.md  pidginrunner.cpp  pidginrunner.desktop  pidginrunner.h
